--- a/Domaci_03.1.html
+++ b/Domaci_03.1.html
@@ -11,5 +11,7 @@
     <p>Domaci je ucenje gita i githuba</p>
     <p>ovde sam sada uradio ovaj paragraf i hocu da stejdzujem</p>
     <a href="https://www.google.com">google </a>
+    <b> Ovo su sad nove izmene</b>
+    <P>nove izmene branch 3</p>
 </body>
 </html>
