dodao sam kontinente

--- a/Domaci_03.1.html
+++ b/Domaci_03.1.html
@@ -13,5 +13,12 @@
     <a href="https://www.google.com">google </a>
     <b> Ovo su sad nove izmene</b>
     <P>nove izmene branch 3</p>
+        <ol>
+            <li>afrika</li>
+            <li>evropa</li>
+            <li>amerika</li>
+            <li>azija</li>
+            <li>australija</li>
+        </ol>
 </body>
 </html>
